# internship-task-virose

./: bahasa_dengklek.cpp  bunga_gabungan.cpp
TASK-FINAL/Receiver/src/: main.cpp  main.h  utility.cpp
TASK-FINAL/Webots/controllers/controller-fp/: controller-fp.py
TASK-FINAL/Webots/poses/: pose-belok-kanan.json  pose-belok-kiri.json  pose-geser-kanan.json  pose-geser-kiri.json
TASK-FINAL/Webots/worlds/: .fp.wbproj  fp.wbt
task1/: bahasa_dengklek.cpp  bunga_gabungan.cpp
task2/: Bos.cpp  CMakeLists.txt  Movie.cpp  Movie.hpp  Unit.cpp  Unit.hpp  note.txt
task3/: README.md
task3/src/: main.cpp  utility.cpp
task4/: .gitignore  readme.md
task4/bridge/src/: esp32_bridge.cpp  esp32_bridge.h
task4/laptop/: CMakeLists.txt  data.json  main.cpp
task4/receiver/src/: esp32_receiver.cpp  esp32_receiver.h
